# clinvoice-server

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.Docker.md  README.md  compose.yaml  flake.nix  package-lock.json  perms.md  self-signed-key.sh  sqlx-data.json
ci/: scope.ts  test.ts
examples/integrations/docker/: Dockerfile  README.Docker.md  README.md
examples/integrations/docker-compose/: README.Docker.md  README.md  compose.yaml
examples/integrations/docker-compose/terraform/: main.tf
examples/integrations/docker-compose/terraform/postgres/: main.tf  outputs.tf  variables.tf
examples/integrations/docker-compose/terraform/winvoice-server/: main.tf  variables.tf
examples/integrations/docker/terraform/: main.tf  outputs.tf
examples/integrations/docker/terraform/postgres/: main.tf  outputs.tf  variables.tf
examples/integrations/docker/terraform/winvoice-server/: main.tf  outputs.tf  variables.tf
examples/integrations/kubernetes/: README.md
examples/integrations/kubernetes/database/: namespace.yaml  postgres.yaml
examples/integrations/kubernetes/database/secrets/: credentials.yaml
examples/integrations/kubernetes/manifests/database/: postgres.yaml
examples/integrations/kubernetes/server/: deployment.yaml
examples/integrations/kubernetes/server/configs/: permissions.yaml
examples/integrations/kubernetes/server/secrets/: cors.yaml  permissions.yaml
examples/integrations/kubernetes/terraform/postgres/: .terraform.lock.hcl  main.tf  variables.tf
examples/integrations/kubernetes/terraform/winvoice-server/: main.tf  variables.tf
examples/integrations/terraform/: main.tf
examples/integrations/terraform/postgres/: main.tf  outputs.tf
examples/integrations/terraform/winvoice-server/: main.tf
kubernetes/: README.md  deploy.sh
kubernetes/database/: cluster.yaml
kubernetes/kind/: cluster.yaml
kubernetes/server/: deployment.yaml  ingress.yaml  service.yaml
kubernetes/server/configs/: permissions.yaml
kubernetes/server/secrets/: cors.yaml
src/: args.rs  bool_ext.rs  clinvoice_server.rs  dyn_result.rs  encrypted.rs  lib.rs  lock.rs  login.rs  main.rs  result_ext.rs  router.rs  run.rs  server.rs  twin_result.rs  utils.rs
src/api/: mod.rs  routes.rs  status.rs  token.rs
src/api/match/: mod.rs  role.rs  user.rs
src/api/match/role/: from.rs
src/api/request/: delete.rs  export.rs  get.rs  mod.rs  post.rs  put.rs  retrieve.rs
src/api/response/: delete.rs  export.rs  get.rs  login.rs  logout.rs  mod.rs  post.rs  put.rs  retrieve.rs  version.rs  who_am_i.rs
src/api/response/delete/: as_ref.rs  from.rs
src/api/response/export/: as_ref.rs  from.rs
src/api/response/get/: as_ref.rs  from.rs
src/api/response/login/: as_ref.rs  from.rs
src/api/response/logout/: as_ref.rs
src/api/response/post/: as_ref.rs  from.rs
src/api/response/put/: as_ref.rs  from.rs
src/api/response/retrieve/: as_ref.rs  from.rs
src/api/response/version/: as_ref.rs
src/api/schema/: mod.rs  role.rs  role_adapter.rs  user.rs  user_adapter.rs  write_where_clause.rs
src/api/schema/columns/: mod.rs  role.rs  user.rs  user_columns.rs
src/api/schema/columns/role/: columns_to_sql.rs  table_to_sql.rs
src/api/schema/columns/user/: columns_to_sql.rs
src/api/schema/columns/user_columns/: table_to_sql.rs
src/api/schema/postgres/: adapter.rs  mod.rs  role.rs  user.rs
src/api/schema/postgres/role/: deletable.rs  retrievable.rs  role_adapter.rs  updatable.rs
src/api/schema/postgres/user/: deletable.rs  from.rs  retrievable.rs  updatable.rs  user_adapter.rs
src/api/schema/user/: auth_user.rs  from_row.rs
src/api/status/: as_ref.rs  code.rs  from.rs
src/api/status/code/: display.rs  from.rs  try_from.rs
src/api/token/: as_ref.rs  try_from.rs
src/args/: command.rs  postgres.rs
src/match/: mod.rs  role.rs  user.rs
src/match/role/: from.rs
src/match/user/: from.rs
src/permissions/: action.rs  mod.rs  object.rs
src/permissions/action/: display.rs
src/permissions/object/: display.rs
src/schema/: adapter.rs  role.rs  role_adapter.rs  user.rs  user_adapter.rs  write_where_clause.rs
src/schema/columns/: role.rs  user.rs
src/schema/columns/role/: columns_to_sql.rs
src/schema/columns/user/: columns_to_sql.rs  table_to_sql.rs
src/schema/postgres/: adapter.rs  role.rs  user.rs
src/schema/postgres/role/: deletable.rs  retrievable.rs  role_adapter.rs  updatable.rs
src/schema/postgres/user/: deletable.rs  from.rs  retrievable.rs  updatable.rs  user_adapter.rs
src/schema/user/: auth_user.rs  date_time_ext.rs  from_row.rs
src/server/: auth.rs  db_session_store.rs  handler.rs  response.rs  router.rs  session.rs  sessions.rs  state.rs  test_client_ext.rs
src/server/auth/: context.rs  init_users_table.rs  initializable.rs  initializable_with_authorization.rs  mod.rs  user.rs
src/server/auth/initializable_with_authorization/: 20-roles.sql  21-users.sql
src/server/db_session_store/: clone.rs  initializable.rs  session_store.rs
src/server/db_session_store/initializable/: 30-db-session-store.sql
src/server/handler/: reason.rs
src/server/handler/reason/: display.rs
src/server/response/: debug.rs  delete.rs  export.rs  hash.rs  into_response.rs  login.rs  login_response.rs  logout.rs  logout_response.rs  partial_eq.rs  partial_ord.rs  version.rs  who_am_i.rs
src/server/response/delete/: from.rs
src/server/response/export/: from.rs
src/server/response/login/: from.rs
src/server/response/login_response/: from.rs
src/server/response/logout/: from.rs
src/server/response/logout_response/: from.rs
src/server/response/who_am_i/: from.rs
src/server/sessions/: cookie.rs  login.rs  mod.rs  refresh.rs  session.rs  session_manager.rs
src/server/sessions/session/: hash.rs  partial_eq.rs  partial_ord.rs
src/server/sessions/session_manager/: clone.rs  debug.rs  from_ref.rs
src/server/state/: clone.rs
src/server/tests/: mod.rs  postgres.rs
src/server/tests/postgres/: delete.rs  export.rs  get.rs  healthy.rs  mod.rs  patch.rs  post.rs  put.rs  who_am_i.rs
(+1 files in other folders)
