# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "winvoice-server"
version = "0.1.0-alpha.1"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "HTTP server to run Winvoice commands on from any frontend"

categories = ["command-line-utilities", "database", "web-programming::http-server"]
edition = "2021"
keywords = ["backend", "cli", "command", "command-line", "freelance", "invoice", "line", "server"]
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/winvoice-server"

[dependencies]
async-trait = {optional = true, version = "0.1"}
axum = {optional = true, version = "0.6"}
axum-server = {optional = true, features = ["tls-rustls"], version = "0.5"}
clap = {features = ["derive"], optional = true, version = "4"}
futures = {optional = true, version = "0.3"}
headers = {optional = true, version = "0.3"}
humantime = "2"
money2 = {features = ["serde"], version = "0.8"}
serde = "1"
tower = {features = ["timeout"], optional = true, version = "0.4"}
tower-http = {features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd"], optional = true, version = "0.4"}
sqlx = {features = ["runtime-tokio-rustls", "tls"], optional = true, version = "0.5"}
tokio = {features = ["macros", "rt-multi-thread"], optional = true, version = "1"}

[dependencies.winvoice-adapter]
branch = "release/0.19"
default-features = false
git = "https://github.com/Iron-E/winvoice-adapter"

[dependencies.winvoice-adapter-postgres]
branch = "release/0.9"
git = "https://github.com/Iron-E/winvoice-adapter-postgres"
optional = true

[dependencies.winvoice-config]
branch = "release/0.8"
git = "https://github.com/Iron-E/winvoice-config"

[dependencies.winvoice-export]
branch = "release/0.3"
features = ["markdown"]
git = "https://github.com/Iron-E/winvoice-export"

[dependencies.winvoice-match]
branch = "release/0.9"
features = ["serde"]
git = "https://github.com/Iron-E/winvoice-match"

[dependencies.winvoice-schema]
branch = "release/0.12"
features = ["serde"]
git = "https://github.com/Iron-E/winvoice-schema"

[dev-dependencies]
dotenvy = "0.15"
pretty_assertions = "1"

[features]
default = ["postgres"]
bin = ["async-trait", "axum", "axum-server", "clap", "futures", "headers", "sqlx", "tokio", "tower", "tower-http"]
postgres = ["bin", "winvoice-adapter-postgres", "sqlx/postgres"]
